--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,7 +9,7 @@
 
         <link rel="shortcut icon" href="/images/favicon_1.ico">
 
-        <title>Minton - Responsive Admin Dashboard Template</title>
+        <title>보라맛 - 정형 데이터 중개 사이트</title>
 
         <link href="/stylesheets/plugins/jquery.circliful.css" rel="stylesheet" type="text/css" />
 
@@ -29,8 +29,10 @@
         <![endif]-->
 
         <script src="/js/modernizr.min.js"></script>
+        
+        
+        
 
 
-    </head>
     
     
