--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <% include main %>
-
+</head>
     <body>
 
 
@@ -18,209 +18,6 @@
                     </div>
                 </div>
                 <!-- Page-Title -->
-
-
-                <div class="row">
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="widget-simple-chart text-right card-box">
-                            <div class="circliful-chart" data-dimension="90" data-text="35%" data-width="5" data-fontsize="14" data-percent="35" data-fgcolor="#5fbeaa" data-bgcolor="#ebeff2"></div>
-                            <h3 class="text-success counter">2562</h3>
-                            <p class="text-muted text-nowrap">Total Sales today</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="widget-simple-chart text-right card-box">
-                            <div class="circliful-chart" data-dimension="90" data-text="75%" data-width="5" data-fontsize="14" data-percent="75" data-fgcolor="#3bafda" data-bgcolor="#ebeff2"></div>
-                            <h3 class="text-primary counter">5685</h3>
-                            <p class="text-muted text-nowrap">Daily visitors</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="widget-simple-chart text-right card-box">
-                            <div class="circliful-chart" data-dimension="90" data-text="58%" data-width="5" data-fontsize="14" data-percent="58" data-fgcolor="#f76397" data-bgcolor="#ebeff2"></div>
-                            <h3 class="text-pink">$ <span class="counter">12480</span></h3>
-                            <p class="text-muted text-nowrap">Total Earning</p>
-                        </div>
-                    </div>
-
-                    <div class="col-sm-6 col-lg-3">
-                        <div class="widget-simple-chart text-right card-box">
-                            <div class="circliful-chart" data-dimension="90" data-text="49%" data-width="5" data-fontsize="14" data-percent="49" data-fgcolor="#98a6ad" data-bgcolor="#ebeff2"></div>
-                            <h3 class="text-inverse counter">62</h3>
-                            <p class="text-muted text-nowrap">Pending Orders</p>
-                        </div>
-                    </div>
-                </div>
-                <!-- end row -->
-
-
-
-
-                <div class="row">
-                    <div class="col-lg-4">
-                        <div class="card-box">
-                            <h4 class="text-dark  header-title m-t-0 m-b-30">Total Revenue</h4>
-
-                            <div class="widget-chart text-center">
-                                <div id="sparkline1"></div>
-                                <ul class="list-inline m-t-15">
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Target</h5>
-                                        <h4 class="m-b-0">$1000</h4>
-                                    </li>
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Last week</h5>
-                                        <h4 class="m-b-0">$523</h4>
-                                    </li>
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Last Month</h5>
-                                        <h4 class="m-b-0">$965</h4>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="card-box">
-                            <h4 class="text-dark  header-title m-t-0 m-b-30">Yearly Sales Report</h4>
-
-                            <div class="widget-chart text-center">
-                                <div id="sparkline2"></div>
-                                <ul class="list-inline m-t-15">
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Target</h5>
-                                        <h4 class="m-b-0">$1000</h4>
-                                    </li>
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Last week</h5>
-                                        <h4 class="m-b-0">$523</h4>
-                                    </li>
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Last Month</h5>
-                                        <h4 class="m-b-0">$965</h4>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-
-                    <div class="col-lg-4">
-                        <div class="card-box">
-                            <h4 class="text-dark header-title m-t-0 m-b-30">Weekly Sales Report</h4>
-
-                            <div class="widget-chart text-center">
-                                <div id="sparkline3"></div>
-                                <ul class="list-inline m-t-15">
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Target</h5>
-                                        <h4 class="m-b-0">$1000</h4>
-                                    </li>
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Last week</h5>
-                                        <h4 class="m-b-0">$523</h4>
-                                    </li>
-                                    <li>
-                                        <h5 class="text-muted m-t-20">Last Month</h5>
-                                        <h4 class="m-b-0">$965</h4>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-                <!-- end row -->
-
-
-
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="card-box">
-                            <div class="row">
-                                <div class="col-sm-7">
-                                    <div class="row">
-                                        <div class="col-xs-6 text-center">
-                                            <canvas id="partly-cloudy-day" width="100" height="100"></canvas>
-                                        </div>
-                                        <div class="col-xs-6">
-                                            <h2 class="m-t-0 text-muted"><b>32°</b></h2>
-                                            <p class="text-muted">Partly cloudy</p>
-                                            <p class="text-muted">15km/h - 37%</p>
-                                        </div>
-                                    </div><!-- End row -->
-                                </div>
-                                <div class="col-sm-5">
-                                    <div class="row">
-                                        <div class="col-xs-4 text-center">
-                                            <h4 class="text-muted m-t-0">SAT</h4>
-                                            <canvas id="cloudy" width="35" height="35"></canvas>
-                                            <h4 class="text-muted">30<i class="wi wi-degrees"></i></h4>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <h4 class="text-muted m-t-0">SUN</h4>
-                                            <canvas id="wind" width="35" height="35"></canvas>
-                                            <h4 class="text-muted">28<i class="wi wi-degrees"></i></h4>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <h4 class="text-muted m-t-0">MON</h4>
-                                            <canvas id="clear-day" width="35" height="35"></canvas>
-                                            <h4 class="text-muted">33<i class="wi wi-degrees"></i></h4>
-                                        </div>
-                                    </div><!-- end row -->
-                                </div>
-                            </div><!-- end row -->
-                        </div>
-                    </div> <!-- end col -->
-
-                    <div class="col-lg-6">
-                        <div class="card-box">
-                            <div class="row">
-                                <div class="col-sm-7">
-                                    <div class="">
-                                        <div class="row">
-                                            <div class="col-xs-6 text-center">
-                                                <canvas id="snow" width="100" height="100"></canvas>
-                                            </div>
-                                            <div class="col-xs-6">
-                                                <h2 class="m-t-0 text-muted"><b> 23°</b></h2>
-                                                <p class="text-muted">Partly cloudy</p>
-                                                <p class="text-muted">15km/h - 37%</p>
-                                            </div>
-                                        </div><!-- end row -->
-                                    </div><!-- weather-widget -->
-                                </div>
-                                <div class="col-sm-5">
-                                    <div class="row">
-                                        <div class="col-xs-4 text-center">
-                                            <h4 class="text-muted m-t-0">SAT</h4>
-                                            <canvas id="sleet" width="35" height="35"></canvas>
-                                            <h4 class="text-muted">30<i class="wi wi-degrees"></i></h4>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <h4 class="text-muted m-t-0">SUN</h4>
-                                            <canvas id="fog" width="35" height="35"></canvas>
-                                            <h4 class="text-muted">28<i class="wi wi-degrees"></i></h4>
-                                        </div>
-                                        <div class="col-xs-4 text-center">
-                                            <h4 class="text-muted m-t-0">MON</h4>
-                                            <canvas id="partly-cloudy-night" width="35" height="35"></canvas>
-                                            <h4 class="text-muted">33<i class="wi wi-degrees"></i></h4>
-                                        </div>
-                                    </div><!-- End row -->
-                                </div> <!-- col-->
-                            </div><!-- End row -->
-                        </div>
-                    </div> <!-- end col -->
-                </div>
-                <!--end row/ WEATHER -->
-
-
 
                 <div class="row">
                     <div class="col-lg-8">
@@ -362,23 +159,15 @@
 
 
         <!-- jQuery  -->
-        <script src="/js/jquery.min.js"></script>
-        <script src="/js/bootstrap.min.js"></script>
-        <script src="/js/detect.js"></script>
-        <script src="/js/fastclick.js"></script>
-        <script src="/js/jquery.blockUI.js"></script>
-        <script src="/js/waves.js"></script>
-        <script src="/js/wow.min.js"></script>
-        <script src="/js/jquery.nicescroll.js"></script>
-        <script src="/js/jquery.scrollTo.min.js"></script>
+       <% include mainjs%>
 
         <!-- Counter Up  -->
         <script src="/js/plugins/jquery.waypoints.js"></script>
         <script src="/js/plugins/jquery.counterup.min.js"></script>
 
         <!-- circliful Chart -->
-        <script src="js/plugins/jquery.circliful.min.js"></script>
-        <script src="js/plugins/jquery.sparkline.min.js"></script>
+        <script src="/js/plugins/jquery.circliful.min.js"></script>
+        <script src="/js/plugins/jquery.sparkline.min.js"></script>
 
         <!-- skycons -->
         <script src="/js/plugins/skycons.min.js" type="text/javascript"></script>
@@ -386,9 +175,7 @@
         <!-- Page js  -->
         <script src="/js/pages/jquery.dashboard.js"></script>
 
-        <!-- Custom main Js -->
-        <script src="/js/jquery.core.js"></script>
-        <script src="/js/jquery.app.js"></script>
+        
 
 
         <script type="text/javascript">
