--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -5,7 +5,7 @@
 
                     <!-- Logo container-->
                     <div class="logo">
-                        <a href="/" class="logo"><i class="md md-equalizer"></i> <span>Minton</span> </a>
+                        <a href="/" class="logo"><i class="md md-equalizer"></i> <span>보라맛</span> </a>
                     </div>
                     <!-- End Logo container-->
 
@@ -89,9 +89,7 @@
                             <li class="dropdown">
                                 <a href="" class="dropdown-toggle waves-effect waves-light profile" data-toggle="dropdown" aria-expanded="true"><img src="/images/users/avatar-1.jpg" alt="user-img" class="img-circle"> </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="javascript:void(0)"><i class="ti-user m-r-5"></i> Profile</a></li>
-                                    <li><a href="javascript:void(0)"><i class="ti-settings m-r-5"></i> Settings</a></li>
-                                    <li><a href="javascript:void(0)"><i class="ti-lock m-r-5"></i> Lock screen</a></li>
+                                    <li><a href="/my"><i class="ti-user m-r-5"></i> Profile</a></li>
                                     <li><a href="javascript:void(0)"><i class="ti-power-off m-r-5"></i> Logout</a></li>
                                 </ul>
                             </li>
@@ -122,160 +120,23 @@
                         <!-- Navigation Menu-->
                         <ul class="navigation-menu">
                             <li class="has-submenu">
-                                <a href="/"><i class="md md-dashboard"></i>Dashboard</a>
+                                <a href="/"><i class="md md-dashboard"></i>보라맛메인</a>
                             </li>
                             <li class="has-submenu">
-                                <a href="#"><i class="md md-color-lens"></i>UI Kit</a>
+                                <a href="#"><i class="md md-color-lens"></i>프로젝트</a>
                                 <ul class="submenu">
-                                    <li><a href="ui-buttons.html">Buttons</a></li>
-                                    <li><a href="ui-panels.html">Panels</a></li>
-                                    <li><a href="ui-portlets.html">Portlets</a></li>
-                                    <li><a href="ui-checkbox-radio.html">Checkboxs-Radios</a></li>
-                                    <li><a href="ui-tabs.html">Tabs & Accordions</a></li>
-                                    <li><a href="ui-modals.html">Modals</a></li>
-                                    <li><a href="ui-progressbars.html">Progress Bars</a></li>
-                                    <li><a href="ui-notification.html">Notification</a></li>
-                                    <li><a href="ui-bootstrap.html">BS Elements</a></li>
-                                    <li><a href="ui-typography.html">Typography</a></li>
+                                    <li><a href="/med">목록보기</a></li>
+                                    <li><a href="#">등록하기</a></li>
                                 </ul>
                             </li>
-
                             <li class="has-submenu">
-                                <a href="#"><i class="md md-invert-colors-on"></i>Components</a>
-                                <ul class="submenu">
-                                    <li><a href="components-grid.html">Grid</a></li>
-                                    <li><a href="components-carousel.html">Carousel</a></li>
-                                    <li><a href="components-widgets.html">Widgets</a></li>
-                                    <li><a href="components-nestable-list.html">Nesteble</a></li>
-                                    <li><a href="components-range-sliders.html">Range Sliders </a></li>
-                                    <li><a href="components-sweet-alert.html">Sweet Alerts </a></li>
-                                </ul>
+                                <a href="/"><i class="md md-invert-colors-on"></i>데이터저장소-출시예정</a>
                             </li>
-
                             <li class="has-submenu">
-                                <a href="#"><i class="md md-class"></i>Other</a>
-                                <ul class="submenu">
-                                    <li class="has-submenu">
-                                        <a href="#">Icons</a>
-                                        <ul class="submenu">
-                                            <li><a href="icons-glyphicons.html">Glyphicons</a></li>
-                                            <li><a href="icons-materialdesign.html">Material Design</a></li>
-                                            <li><a href="icons-themifyicon.html">Themify Icons</a></li>
-                                            <li><a href="icons-ionicons.html">Ion Icons</a></li>
-                                            <li><a href="icons-fontawesome.html">Font awesome</a></li>
-                                            <li><a href="icons-weather.html">Weather Icons</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="has-submenu">
-                                        <a href="#">Forms</a>
-                                        <ul class="submenu">
-                                            <li><a href="form-elements.html">General Elements</a></li>
-                                            <li><a href="form-advanced.html">Advanced Form</a></li>
-                                            <li><a href="form-validation.html">Form Validation</a></li>
-                                            <li><a href="form-wizard.html">Form Wizard</a></li>
-                                            <li><a href="form-wysiwig.html">WYSIWYG Editor</a></li>
-                                            <li><a href="form-summernote.html">Summernote</a></li>
-                                            <li><a href="form-uploads.html">Multiple File Upload</a></li>
-                                            <li><a href="form-xeditable.html">X-editable</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="has-submenu">
-                                        <a href="#">Tables</a>
-                                        <ul class="submenu">
-                                            <li><a href="tables-basic.html">Basic Tables</a></li>
-                                            <li><a href="tables-datatable.html">Data Table</a></li>
-                                            <li><a href="tables-editable.html">Editable Table</a></li>
-                                            <li><a href="tables-responsive.html">Responsive Table</a></li>
-                                            <li><a href="tables-tablesaw.html">Tablesaw</a></li>
-                                            <li><a href="tables-foo-tables.html">Foo Table</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="has-submenu">
-                                        <a href="#">Charts</a>
-                                        <ul class="submenu">
-                                            <li><a href="chart-flot.html">Flot Chart</a></li>
-                                            <li><a href="chart-morris.html">Morris Chart</a></li>
-                                            <li><a href="chart-chartist.html">Chartist chart</a></li>
-                                            <li><a href="chart-nvd3.html">Nvd3 charts</a></li>
-                                            <li><a href="chart-chartjs.html">Chartjs Charts</a></li>
-                                            <li><a href="chart-peity.html">Peity Charts</a></li>
-                                            <li><a href="chart-sparkline.html">Sparkline Charts</a></li>
-                                            <li><a href="chart-other.html">Other Chart</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="has-submenu">
-                                        <a href="#">Maps</a>
-                                        <ul class="submenu">
-                                            <li><a href="map-google.html"> Google Map</a></li>
-                                            <li><a href="map-vector.html"> Vector Map</a></li>
-                                        </ul>
-                                    </li>
-
-                                    <li class="has-submenu">
-                                        <a href="#">Mail</a>
-                                        <ul class="submenu">
-                                            <li><a href="mail-inbox.html">Inbox</a></li>
-                                            <li><a href="mail-compose.html">Compose Mail</a></li>
-                                            <li><a href="mail-read.html">View Mail</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
+                                <a href="/"><i class="md md-class"></i>이용방법</a>
                             </li>
 
-                            <li class="has-submenu">
-                                <a href="#"><i class="md md-pages"></i>Pages</a>
-                                <ul class="submenu megamenu">
-                                    <li>
-                                        <ul>
-                                            <li><a href="pages-blank.html">Blank Page</a></li>
-                                            <li><a href="pages-login.html">Login</a></li>
-                                            <li><a href="pages-register.html">Register</a></li>
-                                            <li><a href="pages-recoverpw.html">Recover Password</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <ul>
-                                            <li><a href="pages-lock-screen.html">Lock Screen</a></li>
-                                            <li><a href="pages-confirm-mail.html">Confirm Mail</a></li>
-                                            <li><a href="pages-404.html">404 Error</a></li>
-                                            <li><a href="pages-500.html">500 Error</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-
-
-                            <li class="has-submenu">
-                                <a href="#"><i class="md md-folder-special"></i>Extras</a>
-                                <ul class="submenu megamenu">
-                                    <li>
-                                        <ul>
-                                            <li><a href="extras-profile.html">Profile</a></li>
-                                            <li><a href="extras-team.html">Team Members</a></li>
-                                            <li><a href="extras-timeline.html">Timeline</a></li>
-                                            <li><a href="extras-invoice.html">Invoice</a></li>
-                                            <li><a href="extras-calendar.html"> Calendar</a></li>
-                                            <li><a href="extras-email-template.html">Email template</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <ul>
-                                            <li><a href="extras-maintenance.html">Maintenance</a></li>
-                                            <li><a href="extras-coming-soon.html">Coming-soon</a></li>
-                                            <li><a href="extras-gallery.html"> Gallery</a></li>
-                                            <li><a href="extras-pricing.html">Pricing</a></li>
-                                            <li><a href="extras-faq.html">FAQ</a></li>
-                                            <li><a href="extras-treeview.html">Treeview</a></li>
-                                        </ul>
-                                    </li>
-                                </ul>
-                            </li>
-
-                        </ul>
+                        </ul>    
                         <!-- End navigation menu -->
                     </div> <!-- end #navigation -->
                 </div> <!-- end container -->
