--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,9 +7,9 @@
     </style>
 </head>
 
-     <body>
-
+    <body>
         <% include navbar2%>
+
         <div class="wrapper-page">
 
             <div class="text-center">
@@ -17,6 +17,12 @@
             </div>
 
             <form class="form-horizontal m-t-20" action="index.html">
+                <div class="form-group">
+                    <div class="col-xs-12">
+                        <input class="form-control" type="email" required="" placeholder="Email">
+                        <i class="md md-email form-control-feedback l-h-34"></i>
+                    </div>
+                </div>
 
                 <div class="form-group">
                     <div class="col-xs-12">
@@ -35,9 +41,9 @@
                 <div class="form-group">
                     <div class="col-xs-12">
                         <div class="checkbox checkbox-primary">
-                            <input id="checkbox-signup" type="checkbox">
+                            <input id="checkbox-signup" type="checkbox" checked="checked">
                             <label for="checkbox-signup">
-                                Remember me
+                                I accept <a href="#">Terms and Conditions</a>
                             </label>
                         </div>
 
@@ -46,21 +52,17 @@
 
                 <div class="form-group text-right m-t-20">
                     <div class="col-xs-12">
-                        <button class="btn btn-primary btn-custom w-md waves-effect waves-light" type="submit">Log In
-                        </button>
+                        <button class="btn btn-primary btn-custom waves-effect waves-light w-md" type="submit">Register</button>
                     </div>
                 </div>
 
                 <div class="form-group m-t-30">
-                    <div class="col-sm-7">
-                        <a href="pages-recoverpw.html" class="text-muted"><i class="fa fa-lock m-r-5"></i> Forgot your
-                            password?</a>
-                    </div>
-                    <div class="col-sm-5 text-right">
-                        <a href="pages-register.html" class="text-muted">Create an account</a>
+                    <div class="col-sm-12 text-center">
+                        <a href="pages-login.html" class="text-muted">Already have account?</a>
                     </div>
                 </div>
             </form>
+
         </div>
 
         
@@ -68,7 +70,10 @@
             var resizefunc = [];
         </script>
 
-        <% include mainjs.ejs%>
+        <!-- Main  -->
+        <% include mainjs%>
+
+       
 	
 	</body>
 </html>
