게시판 작성글 추가

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -158,8 +158,16 @@
 
 
 
-        <!-- jQuery  -->
-       <% include mainjs%>
+       <!-- jQuery  -->
+        <script src="/js/jquery.min.js"></script>
+        <script src="/js/bootstrap.min.js"></script>
+        <script src="/js/detect.js"></script>
+        <script src="/js/fastclick.js"></script>
+        <script src="/js/jquery.blockUI.js"></script>
+        <script src="/js/waves.js"></script>
+        <script src="/js/wow.min.js"></script>
+        <script src="/js/jquery.nicescroll.js"></script>
+        <script src="/js/jquery.scrollTo.min.js"></script>
 
         <!-- Counter Up  -->
         <script src="/js/plugins/jquery.waypoints.js"></script>
@@ -174,6 +182,11 @@
 
         <!-- Page js  -->
         <script src="/js/pages/jquery.dashboard.js"></script>
+
+        <!-- Custom main Js -->
+        <script src="/js/jquery.core.js"></script>
+        <script src="/js/jquery.app.js"></script>
+
 
         
 
