게시판, 마이페이지, 메인화면 update

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,13 +12,15 @@
             <div class="container">
 
                 <!-- Page-Title -->
-                <div class="row">
-                    <div class="col-sm-12">
-                        <h4 class="page-title">Welcome !</h4>
-                    </div>
-                </div>
-                <!-- Page-Title -->
 
+                <!-- Page-Title -->
+                <div class="row"></div>
+                    <div class="col-lg-13">
+                        <div class="card-box">
+                            <img src="/images/dd.png">
+                            <br>s원래는 설명을 쓰자~~~
+                        </div>
+                    </div>
                 <div class="row">
                     <div class="col-lg-8">
                         <div class="card-box">
@@ -98,59 +100,49 @@
                     </div>
                     <!-- end col -8 -->
 
-                    <div class="col-lg-4">
-                        <div class="card-box widget-user">
-                            <div>
-                                <img src="/images/users/avatar-1.jpg" class="img-responsive img-circle" alt="user">
-                                <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">Chadengle</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-warning"><b>Admin</b></small>
-                                </div>
-                            </div>
-                        </div>
+                <!--    <div class="col-lg-4">-->
+                <!--        <div class="card-box widget-user">-->
+                <!--            <div>-->
+                <!--                <img src="/images/users/avatar-1.jpg" class="img-responsive img-circle" alt="user">-->
+                <!--                <div class="wid-u-info">-->
+                <!--                    <h4 class="m-t-0 m-b-5">Chadengle</h4>-->
+                <!--                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>-->
+                <!--                    <small class="text-warning"><b>Admin</b></small>-->
+                <!--                </div>-->
+                <!--            </div>-->
+                <!--        </div>-->
 
-                        <div class="card-box widget-user">
-                            <div>
-                                <img src="/images/users/avatar-2.jpg" class="img-responsive img-circle" alt="user">
-                                <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">Tomaslau</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-success"><b>User</b></small>
-                                </div>
-                            </div>
-                        </div>
+                <!--        <div class="card-box widget-user">-->
+                <!--            <div>-->
+                <!--                <img src="/images/users/avatar-2.jpg" class="img-responsive img-circle" alt="user">-->
+                <!--                <div class="wid-u-info">-->
+                <!--                    <h4 class="m-t-0 m-b-5">Tomaslau</h4>-->
+                <!--                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>-->
+                <!--                    <small class="text-success"><b>User</b></small>-->
+                <!--                </div>-->
+                <!--            </div>-->
+                <!--        </div>-->
 
-                        <div class="card-box widget-user">
-                            <div>
-                                <img src="/images/users/avatar-7.jpg" class="img-responsive img-circle" alt="user">
-                                <div class="wid-u-info">
-                                    <h4 class="m-t-0 m-b-5">Ok</h4>
-                                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
-                                    <small class="text-pink"><b>Admin</b></small>
-                                </div>
-                            </div>
-                        </div>
+                <!--        <div class="card-box widget-user">-->
+                <!--            <div>-->
+                <!--                <img src="/images/users/avatar-7.jpg" class="img-responsive img-circle" alt="user">-->
+                <!--                <div class="wid-u-info">-->
+                <!--                    <h4 class="m-t-0 m-b-5">Ok</h4>-->
+                <!--                    <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>-->
+                <!--                    <small class="text-pink"><b>Admin</b></small>-->
+                <!--                </div>-->
+                <!--            </div>-->
+                <!--        </div>-->
 
-                    </div>
+                <!--    </div>-->
 
-                </div>
+                <!--</div>-->
                 <!-- end row -->
 
 
 
 
-                <!-- Footer -->
-                <footer class="footer text-right">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xs-12">
-                                2017 © Minton.
-                            </div>
-                        </div>
-                    </div>
-                </footer>
-                <!-- End Footer -->
+               <%include footer%>
 
             </div> <!-- end container -->
         </div>
