--- a/views/main.ejs
+++ b/views/main.ejs
@@ -9,7 +9,7 @@
 
         <link rel="shortcut icon" href="/images/favicon_1.ico">
 
-        <title>보라맛 - 정형 데이터 중개 사이트</title>
+        <title>데이터대리 - 정형 데이터 중개 사이트</title>
 
         <link href="/stylesheets/plugins/jquery.circliful.css" rel="stylesheet" type="text/css" />
 
@@ -27,9 +27,17 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
-
+        
+        
         <script src="/js/modernizr.min.js"></script>
         
+        
+        <style>
+            .dd-img{
+                width:10%;
+                height:8%;
+            }
+        </style>
         
         
 
