--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -5,7 +5,7 @@
 
                     <!-- Logo container-->
                     <div class="logo">
-                        <a href="/" class="logo"><i class="md md-equalizer"></i> <span>보라맛</span> </a>
+                        <a href="/" class="logo"><i class="md md-equalizer"></i> <span>데대리</span> </a>
                     </div>
                     <!-- End Logo container-->
 
@@ -87,7 +87,7 @@
                             </li>
 
                             <li class="dropdown">
-                                <a href="" class="dropdown-toggle waves-effect waves-light profile" data-toggle="dropdown" aria-expanded="true"><img src="/images/users/avatar-1.jpg" alt="user-img" class="img-circle"> </a>
+                                <a href="" class="dropdown-toggle waves-effect waves-light profile" data-toggle="dropdown" aria-expanded="true"><img src="/images/gom.jpg" alt="user-img" class="img-circle"> </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="/my"><i class="ti-user m-r-5"></i> Profile</a></li>
                                     <li><a href="javascript:void(0)"><i class="ti-power-off m-r-5"></i> Logout</a></li>
@@ -120,7 +120,7 @@
                         <!-- Navigation Menu-->
                         <ul class="navigation-menu">
                             <li class="has-submenu">
-                                <a href="/"><i class="md md-dashboard"></i>보라맛메인</a>
+                                <a href="/"><i class="md md-dashboard"></i>데대리메인</a>
                             </li>
                             <li class="has-submenu">
                                 <a href="#"><i class="md md-color-lens"></i>프로젝트</a>
