--- a/views/med_form.ejs
+++ b/views/med_form.ejs
@@ -19,14 +19,15 @@
                 <!-- Page-Title -->
 
                 <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col-lg-2"></div>
+                    <div class="col-lg-8">
                         <div class="card-box">
                             <h4 class="m-t-0 m-b-30 header-title"><b>게시글 작성하기</b></h4>
                             
                                     <form class="form-horizontal group-border-dashed" action="#">
                                         <div class="form-group">
                                             <label class="col-sm-2 control-label">제목</label>
-                                            <div class="col-sm-6">
+                                            <div class="col-sm-8">
                                                 <input type="text" class="form-control" required placeholder="Type something" />
                                             </div>
                                         </div>
@@ -34,7 +35,7 @@
                                         <div class="form-group">
                                             <label class="col-sm-2 control-label">내용</label>
                                             <div class="col-sm-8">
-                                                <textarea id="elm1" required class="form-control" rows=10>아아</textarea>
+                                                <textarea id="elm1" required class="form-control" rows=10></textarea>
                                             </div>
                                         </div>
                                         <div class="form-group">
@@ -49,7 +50,7 @@
                                         </div>
                                     </form>
                             </div>
-
+                            <div class="col-lg-2"></div>
                                 
                             
                     </div>
