새로운 로그인과 인덱스 페이지

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -1,5 +1,6 @@
 @import url(https://fonts.googleapis.com/css?family=Noto+Sans:400,700);
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700);
+@import url(http://fonts.googleapis.com/earlyaccess/nanumpenscript.css);
 /* ===========
    Core file List
 
@@ -21,6 +22,10 @@ body {
   padding-bottom: 61px;
   overflow-x: hidden !important;
 }
+.body-login{
+  background-image: url("/public/images/login-image.jpg");
+  background-size: cover;
+}
 html {
   overflow-x: hidden;
   position: relative;
@@ -38,7 +43,8 @@ h6 {
   margin: 10px 0;
 }
 h1 {
-  line-height: 43px;
+  line-height: 50px;
+  font-family: 'Nanum Pen Script', serif;
 }
 h2 {
   line-height: 35px;
@@ -109,6 +115,19 @@ a:focus {
   margin-top: 0px;
 }
 .card-box {
+  padding: 20px;
+  border: 1px solid rgba(54, 64, 74, 0.08);
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  background-clip: padding-box;
+  margin-bottom: 20px;
+  background-color: #fff;
+}
+.card-box2 {
+  text-align: center;
+  font-family: 'Nanum Pen Script', serif;
+  font-size:40px;
   padding: 20px;
   border: 1px solid rgba(54, 64, 74, 0.08);
   -webkit-border-radius: 5px;
