--- a/views/login_new.ejs
+++ b/views/login_new.ejs
@@ -7,13 +7,13 @@
     </style>
 </head>
 
-    <body>
+    <body class="login">
         <% include navbar2%>
 
         <div class="wrapper-page">
 
             <div class="text-center">
-                <a href="/" class="logo logo-lg"><i class="md md-equalizer"></i> <span>Minton</span> </a>
+                <a href="/" class="logo logo-lg"><img src="/images/data-logo.png"></a>
             </div>
 
             <form class="form-horizontal m-t-20" action="index.html">
@@ -42,8 +42,8 @@
                     <div class="col-xs-12">
                         <div class="checkbox checkbox-primary">
                             <input id="checkbox-signup" type="checkbox" checked="checked">
-                            <label for="checkbox-signup">
-                                I accept <a href="#">Terms and Conditions</a>
+                            <label for="checkbox-signup" style="color: MintCream">
+                                I accept <a href="#" style="color: Lime">Terms and Conditions</a>
                             </label>
                         </div>
 
@@ -58,7 +58,7 @@
 
                 <div class="form-group m-t-30">
                     <div class="col-sm-12 text-center">
-                        <a href="pages-login.html" class="text-muted">Already have account?</a>
+                        <a href="pages-login.html" class="text-muted" style="color: MintCream">Already have account?</a>
                     </div>
                 </div>
             </form>
