--- a/public/stylesheets/pages.css
+++ b/public/stylesheets/pages.css
@@ -1088,11 +1088,21 @@ h3.timeline-title {
 /* ===========
    Accounts
  =============*/
+.login {
+  background-image: url('/images/login.jpg');  
+  background-size: cover;
+}
+
 .wrapper-page {
-  margin: 7.5% auto;
-  max-width: 360px;
+  background-color: rgba(255,255,255,0.1);
+  border-radius: 15px;
+  padding: 5px 20px;
+  margin: 20% auto;
+  margin-top: 100px;
+  max-width: 350px;
 }
 .wrapper-page .form-control {
+  
   height: 40px;
   padding-left: 40px;
 }
