--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,13 +7,12 @@
     </style>
 </head>
 
-     <body>
-
+     <body class="login">
         <% include navbar2%>
         <div class="wrapper-page">
-
+           
             <div class="text-center">
-                <a href="/" class="logo logo-lg"><i class="md md-equalizer"></i> <span>Minton</span> </a>
+                <a href="/" class="logo logo-lg"><span style="color: MintCream">데이터 대리</span> </a>
             </div>
 
             <form class="form-horizontal m-t-20" action="index.html">
@@ -36,7 +35,7 @@
                     <div class="col-xs-12">
                         <div class="checkbox checkbox-primary">
                             <input id="checkbox-signup" type="checkbox">
-                            <label for="checkbox-signup">
+                            <label for="checkbox-signup" style="color: MintCream">
                                 Remember me
                             </label>
                         </div>
@@ -53,11 +52,11 @@
 
                 <div class="form-group m-t-30">
                     <div class="col-sm-7">
-                        <a href="pages-recoverpw.html" class="text-muted"><i class="fa fa-lock m-r-5"></i> Forgot your
+                        <a style="color: MintCream" href="pages-recoverpw.html" class="text-muted"><i class="fa fa-lock m-r-5"></i> Forgot your
                             password?</a>
                     </div>
                     <div class="col-sm-5 text-right">
-                        <a href="pages-register.html" class="text-muted">Create an account</a>
+                        <a href="pages-register.html" class="text-muted" style="color: MintCream">Create an account</a>
                     </div>
                 </div>
             </form>
@@ -69,6 +68,6 @@
         </script>
 
         <% include mainjs.ejs%>
-	
+	</div>
 	</body>
 </html>
