--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -84,7 +84,7 @@
                             <li class="dropdown">
                                 <a href="" class="dropdown-toggle waves-effect waves-light profile" data-toggle="dropdown" aria-expanded="true"><img src="/images/gom.jpg" alt="user-img" class="img-circle"> </a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="/my"><i class="ti-user m-r-5"></i> Profile</a></li>
+                                    <li><a href="/my/show"><i class="ti-user m-r-5"></i> Profile</a></li>
                                     <li><a href="javascript:void(0)"><i class="ti-power-off m-r-5"></i> Logout</a></li>
                                 </ul>
                             </li>
