--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,7 +15,7 @@
                 <a href="/" class="logo logo-lg"><span style="color: MintCream">데이터 대리</span> </a>
             </div>
 
-            <form class="form-horizontal m-t-20" action="index.html">
+            <form class="form-horizontal m-t-20" action="/login" method="post">
 
                 <div class="form-group">
                     <div class="col-xs-12">
