게시판 등록하기 페이지 수정

--- a/views/med.ejs
+++ b/views/med.ejs
@@ -24,7 +24,7 @@
                             <a href="/med/new" class="btn btn-danger btn-custom btn-block waves-effect waves-light">새로 등록하기</a>
 
                             <div class="list-group mail-list  m-t-20">
-                                <a href="#" class="list-group-item b-0 active"><i class="fa fa-download m-r-10"></i>금액높은순</a>
+                                <a href="#" class="list-group-item b-0"><i class="fa fa-download m-r-10"></i>금액높은순</a>
                                 <a href="#" class="list-group-item b-0"><i class="fa fa-star-o m-r-10"></i>금액낮은순</a>
                                 <a href="#" class="list-group-item b-0"><i class="fa fa-file-text-o m-r-10"></i>최신등록순</a>
                                 <a href="#" class="list-group-item b-0"><i class="fa fa-paper-plane-o m-r-10"></i>마감임박순</a>
@@ -83,20 +83,20 @@
                                 <div class="form-inline m-b-20">
                                     <div class="row" style="margin-bottom:20px">
                    
-                                        <div class="col-lg-3"></div>
-                                        <div class="col-lg-6">
-                                                
-                                            <form role="search" class="form-inline">
+                                    <div class="col-lg-3"></div>
+                                    <div class="col-lg-6">
+                                            
+                                        <form role="search" class="form-inline">
+                                                    
+                                             <input type="text" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:40px;">
+                                             <a href=""><i class="fa fa-search"></i></a>
                                                         
-                                                 <input type="text" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:40px;">
-                                                 <a href=""><i class="fa fa-search"></i></a>
-                                                            
-                                            </form>
-                                        </div>            
-                                        <div class="col-lg-3"></div>            
-                                               
-                                        
-                                    </div>
+                                        </form>
+                                    </div>            
+                                    <div class="col-lg-3"></div>            
+                                           
+                                    
+                                </div>
                                 </div>
                                 <tbody>
                                     <tr>
