--- a/views/index.ejs
+++ b/views/index.ejs
@@ -313,6 +313,14 @@
                                             <td>Minton admin</td>
                                             <td><span class="label label-warning">Coming soon</span></td>
                                         </tr>
+                                        <tr>
+                                            <td>6</td>
+                                            <td>Minton Admin v1.3</td>
+                                            <td>01/01/2016</td>
+                                            <td>31/05/2016</td>
+                                            <td>Minton admin</td>
+                                            <td><span class="label label-warning">Coming soon</span></td>
+                                        </tr>
 
                                     </tbody>
                                 </table>
@@ -324,7 +332,7 @@
                     <div class="col-lg-4">
                         <div class="card-box widget-user">
                             <div>
-                                <img src="/images/gom.jpg" class="img-responsive img-circle" alt="user">
+                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
                                 <div class="wid-u-info">
                                     <h4 class="m-t-0 m-b-5">빼면 넣을게 없다!!</h4>
                                     <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
@@ -335,7 +343,7 @@
 
                         <div class="card-box widget-user">
                             <div>
-                                <img src="/images/avatar-2.jpg" class="img-responsive img-circle" alt="user">
+                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
                                 <div class="wid-u-info">
                                     <h4 class="m-t-0 m-b-5">게시판 크기 늘려도되는데</h4>
                                     <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
@@ -346,7 +354,7 @@
 
                         <div class="card-box widget-user">
                             <div>
-                                <img src="/images/avatar-7.jpg" class="img-responsive img-circle" alt="user">
+                                <img src="/images/avatar-1.jpg" class="img-responsive img-circle" alt="user">
                                 <div class="wid-u-info">
                                     <h4 class="m-t-0 m-b-5">그럼 또 별로 안이쁨</h4>
                                     <p class="text-muted m-b-5 font-13">coderthemes@gmail.com</p>
