--- a/views/med.ejs
+++ b/views/med.ejs
@@ -86,10 +86,10 @@
                                     <div class="col-lg-3"></div>
                                     <div class="col-lg-6">
                                             
-                                        <form role="search" class="form-inline">
+                                        <form action="/med" method="post" class="form-inline">
                                                     
-                                             <input type="text" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:40px;">
-                                             <a href=""><i class="fa fa-search"></i></a>
+                                             <input type="text" name="query" class="form-control" placeholder="Search" style="width:90%;background-color:white; line-height:40px;height:40px;">
+                                             <button type="submit"><i class="fa fa-search"></i></button>
                                                         
                                         </form>
                                     </div>            
