--- a/views/med_per.ejs
+++ b/views/med_per.ejs
@@ -89,8 +89,12 @@
                                     </div>
                                 </div>
                                 <div class="text-right">
-                                    <button type="button" class="btn btn-primary waves-effect waves-light w-md m-b-30">수정하기</button>
-                                    <button type="button" class="btn btn-primary waves-effect waves-light w-md m-b-30">삭제하기</button>
+                                    <form action="/med/<%= data.post_id %>/update">
+                                        <button type="submit" class="btn btn-primary waves-effect waves-light w-md m-b-30">수정하기</button>
+                                    </form>
+                                    <form action="/med/<%= data.post_id %>/update?_method=delete" method="post">
+                                        <button type="submit" class="btn btn-primary waves-effect waves-light w-md m-b-30">삭제하기</button>
+                                    </form>
                                 </div>
                             </div>
                         </div>
